# container-images

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yaml
.github/workflows/: pr-validate.yaml  push-main-release.yaml  scheduled-cleanup.yaml  scheduled-release.yaml  workflow_call-build_images.yaml  workflow_call-render-readme.yaml
.taskfiles/container/: Taskfile.yaml
.taskfiles/workstation/: Taskfile.yaml
apps/dnsdist/: Dockerfile  metadata.yaml
apps/dnsdist/ci/: latest.py
apps/enshrouded/: Dockerfile  enshrouded_server_example.json  entrypoint.sh  metadata.yaml
apps/enshrouded/ci/: latest.py
apps/project-zomboid/: Dockerfile  entrypoint.sh  metadata.yaml  update_zomboid.txt
apps/project-zomboid/ci/: goss.yaml  latest.py
apps/project-zomboid/scripts/: update_zomboid.txt
apps/project-zomboid/zomboid-manager/: Cargo.toml
apps/project-zomboid/zomboid-manager/src/: config.rs  main.rs
apps/project-zomboid/zomboid-manager/src/zomboid/: commands.rs  handlers.rs  mod.rs  server.rs
apps/tubearchivist/: Dockerfile  metadata.yaml
apps/tubearchivist/ci/: latest.py
apps/tubearchivist/resources/: nginx.conf
