[package]
name = "server-manager"
version = "0.1.0"
edition = "2021"
authors=["dnonn"]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive", "env"] }
ctrlc = { version = "3.4.4", features = ["termination"] }
env_logger = "0.11.3"
log = "0.4.21"
tokio = { version = "1.38.0", features = ["full"] }
wait-timeout = "0.2.0"
